<resources>
    <string name="app_name">SimpleAndroidTests</string>
    <string name="home_text">Hello World!</string>
</resources>